feat: add docs API for endpoint sse and notification
