# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api/
 definitions:
   web.Login:
     properties:
@@ -85,8 +86,7 @@ definitions:
     properties:
       code:
         type: integer
-      data:
-        type: object
+      data: {}
       msg:
         type: string
     type: object
@@ -119,9 +119,92 @@ definitions:
     - description
     - name
     type: object
+host: localhost:8080
 info:
   contact: {}
+  description: Implement collect metric with prometheus and tracing with jaeger
+  license:
+    name: MIT
+    url: https://opensource.org/licenses/MIT
+  title: API Transporter with PostgreSQL
+  version: 1.1.0
 paths:
+  /api/notif-steream/order-success:
+    get:
+      consumes:
+      - application/json
+      operationId: sse_order_success
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: notification-order-order
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: endpoint for sse order success
+      tags:
+      - notifications
+  /api/notif-stream/new-order:
+    get:
+      consumes:
+      - application/json
+      operationId: sse_new_order
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: notification-create-order
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: endpoint for sse new order
+      tags:
+      - notifications
+  /api/notif-stream/take-order:
+    get:
+      consumes:
+      - application/json
+      operationId: sse_take_order
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: notification-take-order
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: endpoint for sse take order
+      tags:
+      - notifications
+  /api/notification/:
+    get:
+      consumes:
+      - application/json
+      operationId: get_notification_by_user_id
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/web.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/web.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: endpoint for get notification by userID
+      tags:
+      - notifications
   /api/order/create:
     post:
       consumes:
@@ -554,4 +637,9 @@ paths:
       summary: get all vehicle
       tags:
       - vehicles
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
